--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,10 +130,10 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:background="@color/songColor"
-        android:layout_height="445dp"
-        android:clipToPadding="false"
+        android:layout_height="match_parent"
         android:layout_marginTop="21dp"
+        android:background="@color/songColor"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
@@ -143,7 +143,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -164,8 +164,8 @@
             <android.support.v7.widget.SwitchCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="38dp"
-                android:layout_marginLeft="310dp"/>
+                android:layout_marginLeft="310dp"
+                android:layout_marginTop="38dp" />
 
             <TextView
                 android:id="@+id/includes"
@@ -177,78 +177,8 @@
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/download"
-                android:background="@color/toolbarColor"
-                android:orientation="horizontal"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-                <ImageButton
-                    android:id="@+id/btnHome"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/toolbarColor"
-                    android:src="@drawable/ic_home"
-                    android:tint="@color/greyText" />
-
-                <ImageButton
-                    android:id="@+id/btnBrowse"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/toolbarColor"
-                    android:src="@drawable/ic_browse"
-                    android:tint="@color/greyText" />
-
-                <ImageButton
-                    android:id="@+id/btnSearch"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/toolbarColor"
-                    android:src="@drawable/ic_search"
-                    android:tint="@color/greyText" />
-
-                <ImageButton
-                    android:id="@+id/btnRadio"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/toolbarColor"
-                    android:src="@drawable/ic_radio"
-                    android:tint="@color/greyText" />
-
-                <ImageButton
-                    android:id="@+id/btnPlaylist"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/toolbarColor"
-                    android:src="@drawable/ic_library"
-                    android:tint="@color/greyText" />
-
-            </LinearLayout>
-
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-    <android.support.v7.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-    </android.support.v7.widget.LinearLayoutCompat>
 
 </android.support.design.widget.CoordinatorLayout>
